@@ -34,9 +34,6 @@
 @interface QLPreviewConverter : NSObject
 @end
 
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wnullability-completeness"
-
 @interface QLPreviewConverter ()
 - (NSURLRequest *)safeRequestForRequest:(NSURLRequest *)request;
 - (id)initWithConnection:(NSURLConnection *)connection delegate:(id)delegate response:(NSURLResponse *)response options:(NSDictionary *)options;
@@ -57,24 +54,14 @@
 @end
 
 @interface QLItem : NSObject
-- (instancetype)initWithDataProvider:(id<QLPreviewItemDataProvider> _Nonnull)data contentType:(NSString *_Nonnull)contentType previewTitle:(NSString *_Nonnull)previewTitle;
+- (instancetype)initWithDataProvider:(id<QLPreviewItemDataProvider>)data contentType:(NSString *)contentType previewTitle:(NSString *)previewTitle;
 @end
 
-
-#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 110000
 #define kQLReturnPasswordProtected 1 << 2
-#else
-#define kQLReturnMask 0xaf00
-#define kQLReturnPasswordProtected (kQLReturnMask | 20)
-#endif
 
 #endif
 
-#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 110000
 static_assert(kQLReturnPasswordProtected == 4, "kQLReturnPasswordProtected should equal 4.");
-#else
-static_assert(kQLReturnPasswordProtected == 44820, "kQLReturnPasswordProtected should equal 44820.");
-#endif
 
 WTF_EXTERN_C_BEGIN
 
@@ -84,5 +71,3 @@ NSString *QLTypeCopyBestMimeTypeForURLAndMimeType(NSURL *, NSString *mimeType);
 NSString *QLTypeCopyUTIForURLAndMimeType(NSURL *, NSString *mimeType);
 
 WTF_EXTERN_C_END
-
-#pragma clang diagnostic pop
